Fixed alignment of workflow template tabs

--- a/pocs/dag-ui-angular/src/app/workflow-template/workflow-template-view/workflow-template-view.component.scss
+++ b/pocs/dag-ui-angular/src/app/workflow-template/workflow-template-view/workflow-template-view.component.scss
@@ -33,6 +33,7 @@
 
 /deep/ .mat-tab-labels {
   opacity: 1;
+  align-items: baseline;
 
   .mat-tab-label {
     .mat-tab-label-content {
